--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             </div>
         </div>
         <div class="col-12 col-md-8">
-            <div id="city-container"></div>
+            <div id="city-container">
+                <h1>City</h1>
+                <ul id="city-info" class="list-group"></ul>
+            </div>
             <div id="five-days-container"></div>
         </div>
 
