--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         
                     </div>
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-md-8" id="main-container">
                     <div id="city-container" class="card p-3">
                         <div> 
                             
