Styling cards making them responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Weather Dashboard</h1>
     </header>
     <main>
-        <section class="container my-5">
+        <section class="container">
             <div class="row">
                 <div class="col-12 col-md-4">
                     <div class="card">   
