--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="assets/styles/style.css">
     
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
 <body>
     <header class="p-3 text-light text-center">
